Add secret code

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="fr" dir="ltr">
 <head>
+    <!--Quel est le chant de la vie ?-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Le Nid aux histoires - Lecture en ligne gratuite</title>
