--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,9 +9,9 @@
     <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-	<link rel="icon" type="image/x-icon" href="content/images/plume.svg">
+	<link rel="icon" type="image/x-icon" href="/content/images/plume.svg">
     <link rel="manifest" href="manifest.webapp" />
-    <link rel="stylesheet" href="content/css/loading.css">
+    <link rel="stylesheet" href="/content/css/loading.css">
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
 <body>
